src/test/resources/accept/assignmentFromId.ul
int bar ()
{
    int id1;

    id4 = id5;
    id1 =
     id4  ;
}
