src/test/resources/reject/comparisonSpacedEquality.ul
int foo ()
{
    id = = 5;
}
